syntax = "proto3";

package asgt.dataservice.v1alpha1;

option go_package = "dataservice";

import "asgt/type/retention_policy.proto";
import "asgt/type/model.proto";
import "asgt/type/dataset.proto";
import "google/protobuf/timestamp.proto";

message GetInfoRequest {
  string dataset_name = 1;
  string dataset_type = 2;
}

message GetInfoResponse {
  asgt.type.Dataset dataset = 1;

  // The most recently trained model; empty if no model has been trained
  asgt.type.Model model = 2;
}